--- a/VisioAddin/VisioAddin/VisioAddin.csproj
+++ b/VisioAddin/VisioAddin/VisioAddin.csproj
@@ -77,9 +77,12 @@
       <HintPath>..\packages\Microsoft.Web.WebView2.1.0.2420.47\lib\net45\Microsoft.Web.WebView2.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Office.Tools.v4.0.Framework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -115,6 +118,12 @@
       <SubType>Code</SubType>
     </Compile>
     <AppDesigner Include="Properties\" />
+    <Compile Include="Ui\FrmContributeShape.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ui\FrmContributeShape.Designer.cs">
+      <DependentUpon>FrmContributeShape.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -138,6 +147,9 @@
     </Compile>
     <Compile Include="PanelFrame.cs" />
     <Compile Include="PanelManager.cs" />
+    <EmbeddedResource Include="Ui\FrmContributeShape.resx">
+      <DependentUpon>FrmContributeShape.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\TogglePanel.png" />
